docs/compile_issue1_log1_20220525a.txt
[Starting] Verifying sketch 'examples\ltr329_simple\ltr329_simple.ino'
[Warning] Output path is not specified. Unable to reuse previously compiled files. Build will be slower. See README.
Loading configuration...
Initializing packages...
Preparing boards...
Verifying...
C:\Users\Pranau\Documents\Arduino\libraries\MCCI_Catena_LTR329\MCCI_Catena_LTR329.cpp: In member function 'void cLTR329::begin()':
C:\Users\Pranau\Documents\Arduino\libraries\MCCI_Catena_LTR329\MCCI_Catena_LTR329.cpp:46:28: error: no matching function for call to 'TwoWire::begin(uint8_t&, uint8_t&)'
Wire.begin(sda, scl);
^
In file included from C:\Users\Pranau\Documents\Arduino\libraries\MCCI_Catena_LTR329\MCCI_Catena_LTR329.h:26:0,
from C:\Users\Pranau\Documents\Arduino\libraries\MCCI_Catena_LTR329\MCCI_Catena_LTR329.cpp:22:
C:\Users\Pranau\AppData\Local\Arduino15\packages\mcci\hardware\stm32\3.0.5\libraries\Wire\src/Wire.h:75:10: note: candidate: void TwoWire::begin()
void begin();
^~~~~
C:\Users\Pranau\AppData\Local\Arduino15\packages\mcci\hardware\stm32\3.0.5\libraries\Wire\src/Wire.h:75:10: note:   candidate expects 0 arguments, 2 provided
C:\Users\Pranau\AppData\Local\Arduino15\packages\mcci\hardware\stm32\3.0.5\libraries\Wire\src/Wire.h:76:10: note: candidate: void TwoWire::begin(uint8_t)
void begin(uint8_t);
^~~~~
C:\Users\Pranau\AppData\Local\Arduino15\packages\mcci\hardware\stm32\3.0.5\libraries\Wire\src/Wire.h:76:10: note:   candidate expects 1 argument, 2 provided
C:\Users\Pranau\AppData\Local\Arduino15\packages\mcci\hardware\stm32\3.0.5\libraries\Wire\src/Wire.h:77:10: note: candidate: void TwoWire::begin(int)
void begin(int);
^~~~~
C:\Users\Pranau\AppData\Local\Arduino15\packages\mcci\hardware\stm32\3.0.5\libraries\Wire\src/Wire.h:77:10: note:   candidate expects 1 argument, 2 provided
exit status 1
IntelliSense configuration already up to date. To manually rebuild your IntelliSense configuration run "Ctrl+Alt+I"
[Error] Verifying sketch 'examples\ltr329_simple\ltr329_simple.ino': Exit with code=1